feat:读取要素，编辑要素

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="favicon.png" />
-  <title>dc-react</title>
+  <link rel="icon" href="https://am-img.gkiiot.com/editor/textures/logo.png" />
+  <title>hc-gis</title>
+  <style>
+    ::-webkit-scrollbar {
+      width: 4px;
+      /*高宽分别对应横竖滚动条的尺寸*/
+      height: 4px;
+    }
+
+    /*滚动条里面小方块*/
+    ::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      box-shadow: inset 0 0 5px rgba(67, 58, 58, 0.2);
+      background: #FFF;
+    }
+
+    /*滚动条里面轨道*/
+    ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px rgba(67, 58, 58, 0.2);
+      border-radius: 0;
+      background: rgba(28, 27, 27, 0.3);
+    }
+  </style>
 </head>
+
 <body>
-<div id="root"></div>
+  <div id="root"></div>
 </body>
+
 </html>
