feat:图层管理，元素编辑

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
       border-radius: 0;
       background: rgba(28, 27, 27, 0.3);
     }
+
+    .dc-popup {
+      z-index: 9999 !important;
+    }
   </style>
 </head>
 
